2007-06-12 Alexander Malysh <amalysh at kannel.org>
   * gwlib/list.c: fixed gwlist_timed_consume.

2007-06-01 Alexander Malysh <amalysh at kannel.org>
   * doc/userguide/userguide.xml, gw/bb_smscconn.c, gw/sms.c,
     gwlib/cfg.def: applied MO concatenation patch. This patch was
     originally written by Paul Bagyenda and then extended by me.
     Thanks Paul!

2007-06-01 Alexander Malysh <amalysh at kannel.org>
   * gw/smsc/smsc_smpp.c: removed GSM-03.38 kludge because it's not
     necessary anymore.

2007-05-20  Stipe Tolj  <stolj at kannel.org>
   * gw/smsc/smsc_at.c: fix a possible segfault while read()ing on the device
     file descriptor. Thanks to Ben Suffolk <ben@vanilla.net> for the patch.
     [Msg-Id: <C7D0A46D-FD3B-4C28-8E25-22BF3EA38DAE@vanilla.net>]
   
2007-05-18 Alexander Malysh <amalysh at kannel.org>
   * gwlib/list.c: use macro instead of direct access.

2007-05-18  Stipe Tolj  <stolj at kannel.org>
   * gwlib/charset.c: imunize charset_[gsm|utf8]_to_[utf8|gsm]() functions 
     for NULL argument. Currently these would panic due to octstr_append() 
     called at the end with a NULL argument. NLC.
   
2007-05-15 Alexander Malysh <amalysh at kannel.org>
   * gwlib/list.[ch]: added new function gwlist_timed_consume that works
     as gwlist_consume except that we are able to specify timeout.

2007-04-24  Andreas Fink <andreas at fink.org>
   * gwlib/gwlib.c: call log_init before http_init and socket_init so error
     messages from those init calls actually are able to appear on the screen
     instead of crashing bearerbox at start. Reported under MacOS X by
     Alejandro Guerrieri. Only happened if hostname was not set.
     ERROR: Can't find out official hostname for this host, using `xyz' instead.
     was being sent to a logfile not open... -> crash

2007-04-20  Stipe Tolj  <stolj at kannel.org>
   * aclocal.m4: fixed typo and updated email references. NLC.
   * Makefile.in: adding creation of symlink for 'gw-config' if we have used