@@ -85,6 +85,6 @@ D/smsc////
 /bearerbox.c/1.165/Wed Mar 21 22:13:55 2007//
 /bearerbox.h/1.32/Wed Mar 21 21:34:24 2007//
 /bb_boxc.c/1.90/Tue May 15 18:11:02 2007//
-/bb_smscconn.c/1.93/Wed May 16 09:56:23 2007//
 /sms.c/1.27/Fri May 18 16:19:23 2007//
 /smskannel.conf/1.18/Fri Jun  1 11:22:53 2007//
+/bb_smscconn.c/1.94/Tue Jun 12 14:06:30 2007//
